[gd_scene load_steps=2 format=3 uid="uid://desgpqapsbjjh"]

[ext_resource type="Script" path="res://scene/enemies/enemybase/enemy_base.gd" id="1_4dp60"]

[node name="EnemyBase" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_4dp60")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0

[connection signal="screen_entered" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_exited"]
